--- a/assm/app.cfg
+++ b/assm/app.cfg
@@ -1,9 +1,12 @@
 [TITLE]
 "Онлайн ассемблер 580ВМ80 / i8080 / i8085 / Z80"			ru
+"Онлайн ассемблер 580ВМ80 / i8080 / i8085 / Z80"			en
 
 [KEYWORDS]
 "580ВМ80, i8080, i8085, Z80, онлайн ассемблер, online assembler"	ru
+"580ВМ80, i8080, i8085, Z80, онлайн ассемблер, online assembler"	en
 
 [DESCRIPTION]
 "Онлайн ассемблер 580ВМ80 / i8080 / i8085 / Z80"			ru
+"Онлайн ассемблер 580ВМ80 / i8080 / i8085 / Z80"			en
 
