--- a/emulator/app.cfg
+++ b/emulator/app.cfg
@@ -1,8 +1,8 @@
 [TITLE]
 "Эмулятор 8-битных ретрокомпьютеров на 580ВМ80/i8080/i8085/Z80."
-"Эмулятор Радио-86РК."							ru
+"Эмулятор Радио-86РК на JavaScript."					ru
 "8-bit computers emulator on 580ВМ80/i8080/i8085/Z80."
-"Emulator Radio-86RK."							en
+"Emulator Radio-86RK in JavaScript."					en
 
 [KEYWORDS]
 "Эмулятор, 8-битный, ретрокомпьютеры, 580ВМ80, 8080, 8085, Z80, "
@@ -12,7 +12,7 @@
 
 [DESCRIPTION]
 "Эмулятор 8-битных ретрокомпьютеров на 580ВМ80/i8080/i8085/Z80, "
-"Эмулятор Радио-86РК"							ru
+"Эмулятор Радио-86РК на JavaScript"					ru
 "8-bit computers emulator on 580ВМ80/i8080/i8085/Z80, "
-"emulator RADIO-86RK"							en
+"emulator RADIO-86RK in JavaScript"					en
 
